Wired up MasterVC

--- a/JohnLewisExercise/JohnLewisExercise/Base.lproj/Main.storyboard
+++ b/JohnLewisExercise/JohnLewisExercise/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="fc9-mo-zlY">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductSummaryCell" id="fc9-mo-zlY" customClass="ProductSummaryCell" customModule="JohnLewisExercise" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -40,6 +40,10 @@
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="UeL-Je-4KC"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="eIZ-MY-Rj6"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -50,6 +54,9 @@
                             <constraint firstItem="6WI-EF-X2p" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="uTc-CV-BF2"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="6WI-EF-X2p" id="HOd-HS-BYs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
