--- a/JohnLewisExercise/JohnLewisExercise/Base.lproj/Main.storyboard
+++ b/JohnLewisExercise/JohnLewisExercise/Base.lproj/Main.storyboard
@@ -25,29 +25,63 @@
                                 <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hh2-Tw-HMq">
-                                    <size key="itemSize" width="328" height="161"/>
+                                    <size key="itemSize" width="328" height="335"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductSummaryCell" id="fc9-mo-zlY" customClass="ProductSummaryCell" customModule="JohnLewisExercise" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="328" height="161"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="328" height="335"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="328" height="161"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="328" height="335"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G62-Ly-xu6">
-                                                    <rect key="frame" x="8" y="8" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G62-Ly-xu6">
+                                                    <rect key="frame" x="8" y="277" width="312" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Uf-FO-G4s">
+                                                    <rect key="frame" x="8" y="306" width="312" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dLZ-Wj-Yuf">
+                                                    <rect key="frame" x="0.0" y="0.0" width="328" height="269"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nbh-Bc-eKB">
+                                                            <rect key="frame" x="20" y="20" width="288" height="229"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="nbh-Bc-eKB" firstAttribute="top" secondItem="dLZ-Wj-Yuf" secondAttribute="top" constant="20" id="GqA-Lh-bAe"/>
+                                                        <constraint firstAttribute="trailing" secondItem="nbh-Bc-eKB" secondAttribute="trailing" constant="20" id="Grh-Sh-GYR"/>
+                                                        <constraint firstAttribute="bottom" secondItem="nbh-Bc-eKB" secondAttribute="bottom" constant="20" id="RdQ-FR-mGP"/>
+                                                        <constraint firstItem="nbh-Bc-eKB" firstAttribute="leading" secondItem="dLZ-Wj-Yuf" secondAttribute="leading" constant="20" id="jh2-CF-IxM"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="4Uf-FO-G4s" firstAttribute="leading" secondItem="fc9-mo-zlY" secondAttribute="leading" constant="8" id="3hS-li-cfG"/>
+                                            <constraint firstItem="dLZ-Wj-Yuf" firstAttribute="leading" secondItem="fc9-mo-zlY" secondAttribute="leading" id="6It-kD-tWE"/>
+                                            <constraint firstAttribute="trailing" secondItem="G62-Ly-xu6" secondAttribute="trailing" constant="8" id="8sY-6k-tll"/>
+                                            <constraint firstItem="G62-Ly-xu6" firstAttribute="leading" secondItem="fc9-mo-zlY" secondAttribute="leading" constant="8" id="Gta-mZ-112"/>
+                                            <constraint firstItem="G62-Ly-xu6" firstAttribute="top" secondItem="dLZ-Wj-Yuf" secondAttribute="bottom" constant="8" id="MKL-w1-Hgd"/>
+                                            <constraint firstAttribute="trailing" secondItem="dLZ-Wj-Yuf" secondAttribute="trailing" id="MhJ-pz-DHI"/>
+                                            <constraint firstItem="4Uf-FO-G4s" firstAttribute="top" secondItem="G62-Ly-xu6" secondAttribute="bottom" constant="8" id="o0l-FH-kPy"/>
+                                            <constraint firstItem="dLZ-Wj-Yuf" firstAttribute="top" secondItem="fc9-mo-zlY" secondAttribute="top" id="u53-r5-Jxa"/>
+                                            <constraint firstAttribute="bottom" secondItem="4Uf-FO-G4s" secondAttribute="bottom" constant="8" id="uLF-ib-q0w"/>
+                                            <constraint firstAttribute="trailing" secondItem="4Uf-FO-G4s" secondAttribute="trailing" constant="8" id="vy3-RL-7Nb"/>
+                                        </constraints>
                                         <connections>
+                                            <outlet property="imageView" destination="nbh-Bc-eKB" id="xa5-ZA-yay"/>
+                                            <outlet property="priceLabel" destination="4Uf-FO-G4s" id="Lfm-s0-AyB"/>
                                             <outlet property="titleLabel" destination="G62-Ly-xu6" id="mtf-Bc-CWz"/>
                                         </connections>
                                     </collectionViewCell>
